# cruft_helloworld

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .requirements.txt  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml  update.yml  update.yml.rej
cruft_helloworld/: __init__.py  app.py
cruft_helloworld/services/: globe_emoji_with_geoip.py
cruft_helloworld/tools/: config_loggers.py  dict_nested_update.py  enums.py  globe_emoji_with_geoip.py
tests/: conftest.py  test_app.py  test_globe_emoji_with_geoip.py
tests/tools/: default_parameter.py  locals_signature.py  monkeypath_target.py  parametrization_case.py
